apps/web/src/components/sidebar/component.css
aside {
	backdrop-filter: blur(5px);
	display: flex;
	flex-direction: column;
	gap: 0.8rem;
	height: 100svh;
	left: 0;
	padding: 0.8rem;
	padding-top: 3.5rem;
	mask: linear-gradient(to right, black 70%, transparent);
	position: absolute;
	top: 0;
	width: 20rem;

	&:not(.open):not(.opening) {
		display: none;
	}

	&.opening {
		animation: 200ms ease-in forwards fade-slide-in;
	}

	&.closing {
		animation: 200ms ease-in reverse forwards fade-slide-in;
	}

	button {
		background-color: #0000;
		border-radius: 5px;
		border: 1px solid #0004;
		margin-right: 25%;
		padding: 0.5rem 0.8rem;
		text-align: left;
	}
}

.sidebar-toggle {
	backdrop-filter: blur(5px);
	background-color: transparent;
	border: 1px solid #0004;
	border-radius: 5px;
	left: 0;
	margin: 0.8rem;
	padding: 0.4rem 0.5rem;
	position: absolute;
	top: 0;
	z-index: 999;
}

@keyframes fade-slide-in {
	from {
		opacity: 0;
		transform: translateX(-10%);
	}

	to {
		opacity: 1;
		transform: 0;
	}
}

